compilateurMinCaml/tests/typechecking/valid/Array.ml
let x = Array.create 1 2 in print_int (x.(0))