compilateurMinCaml/tests/typechecking/invalid/Array.ml
let x = Array.create true () in print_int (x.(0))